# salsa

./: .gitignore  .secrets.toml.example  .secrets.toml.template  CLAUDE.md  Cargo.toml  LICENSE  build.rs  config.toml  config.toml.example  database.json  database.sqlite3.od  i18n.toml  readme.md  telescopes.toml  vale.md
.github/workflows/: rust.yml
SalsaSpectrum/: SalsaSpectrum.m
assets/: about.html  about.sv.html  colors.html  database.sqlite3  experiments-gnss.html  experiments-gnss.sv.html  experiments-hi.html  experiments-hi.sv.html  experiments-sun.html  experiments-sun.sv.html  experiments.html  google-sheets-guide.html  google-sheets-guide.sv.html  lna.html  observation_chart.js  observe_chart.js  rot2prog.html  style.css  style.src.css  support.html  support.sv.html  technical.html  technical.sv.html  user-manual.html  user-manual.sv.html  webcam.html  welcome.html
assets/.well-known/: microsoft-identity-association.json
assets/fonts/: google-fonts.css
deploy/sysctl.d/: 99-salsa.conf  zz-salsa.conf
deploy/systemd/: salsa.service
i18n/en/: salsa.ftl
i18n/sv/: salsa.ftl
sql_migrations/: V10__add_booking_description.sql  V11__add_booking_country.sql  V12__add_support_announcement.sql  V12__interferometry.sql  V14__add_session_expiry.sql  V15__add_guest_sessions.sql  V16__add_user_timezone.sql  V17__add_user_language.sql  V5__add_observation_table.sql  V6__add_vlsr_correction.sql  V7__account_linking.sql  V7__add_telescope_maintenance.sql  V8__add_offsets_to_observation.sql  V9__add_local_users.sql
src/: app.rs  booking_monitor.rs  coords.rs  correlator.rs  database.rs  error.rs  fits.rs  geoip.rs  guest_monitor.rs  guest_rate_limiter.rs  i18n.rs  lib.rs  logging.rs  login_rate_limiter.rs  main.rs  secrets.rs  supervised_task.rs  telescope_controller.rs  telescope_tracker.rs  timefmt.rs  tle_cache.rs  weather_cache.rs
src/middleware/: cookies.rs  language.rs  mod.rs  no_guests.rs  session.rs
src/models/: booking.rs  fake_telescope.rs  guest.rs  interferometry.rs  maintenance.rs  mod.rs  observation.rs  salsa_telescope.rs  session.rs  support_announcement.rs  telescope.rs  telescope_types.rs  user.rs
src/routes/: about.rs  account.rs  admin.rs  authentication.rs  booking.rs  experiments.rs  index.rs  interferometry.rs  language.rs  live.rs  mod.rs  observations.rs  observe.rs  support.rs  technical.rs  (+4 more)
templates/: account.html  admin.html  admin_calibrate_confirm.html  admin_calibrate_result.html  bookings.html  error_callout.html  index.html  interferometry_list.html  interferometry_session.html  known_issue_banner.html  live.html  live_telescopes.html  login.html  observations.html  observe.html  observe_landing.html  observe_maintenance.html  observe_no_booking.html  telescope_state.html  telescope_state_offline.html  visibility.html  weather.html  webcam_status.html  welcome.html  welcome_banner.html
tests/: http_simulation_tests.rs  http_tests.rs
(+5 files in other folders)
