[package]
name = "backend"
version = "0.1.0"
edition = "2024"

default-run = "backend"

[dependencies]
askama = "0.15"
async-trait = "0.1.*"
axum = { version = "0.8.*", features = ["json", "ws"] }
axum-server = { version = "0.7.*", features = ["tls-rustls"] }
base64 = { version = "0.22.*" }
chrono = { version = "0.4.*", features = ["serde"] }
clap = { version = "4.*", features = ["derive", "env"] }
deadpool-sqlite = { version = "0.10", features = ["rt_tokio_1"] }
oauth2 = "5.*"
rand = "0.9.*"
rand_distr = "0.5.*"
refinery = { version = "0.8.*", features = ["rusqlite"] }
reqwest = { version = "0.12.*", default-features = false, features = ["rustls-tls", "json", "blocking"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
rustls="0.23"
rustfft="6.*"
serde = {version = "1.*", features = ["derive"] }
serde_json = "1.*"
thiserror = "2.*"
tokio = { version = "1.*", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.*"
toml = "0.8.*"
tower-http = { version = "0.6.*", features = ["full"] }
tracing = "0.1.44"
tracing-journald = "0.3.2"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}
uhd = "0.3.*"

[dev-dependencies]
tempdir = "*"
