[package]
name = "salsa"
version = "1.1.11"
edition = "2024"
default-run = "salsa"

[dependencies]
argon2 = "0.5.*"
db_ip = { version = "0.3", features = ["include-country-code-lite"] }
askama = "0.15"
async-trait = "0.1.*"
axum = { version = "0.8.*", features = ["json", "ws"] }
axum-server = { version = "0.7.*", features = ["tls-rustls"] }
base64 = { version = "0.22.*" }
chrono = { version = "0.4.*", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.*", features = ["derive", "env"] }
deadpool-sqlite = { version = "0.10", features = ["rt_tokio_1"] }
oauth2 = "5.*"
rand = "0.9.*"
rand_distr = "0.5.*"
refinery = { version = "0.8.*", features = ["rusqlite"] }
reqwest = { version = "0.12.*", default-features = false, features = ["rustls-tls", "json", "blocking", "cookies"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
rustls="0.23"
rustfft="6.*"
serde = {version = "1.*", features = ["derive"] }
sgp4 = { version = "2.*", default-features = false, features = ["std", "serde"] }
serde_json = "1.*"
thiserror = "2.*"
tokio = { version = "1.*", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.*"
toml = "0.8.*"
tower-http = { version = "0.6.*", features = ["full"] }
tracing = "0.1.44"
tracing-journald = "0.3.2"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}
# Pinned: we need the time-source/PPS methods merged after the uhd-v0.3.0
# tag, which no crates.io release contains yet. Bump deliberately.
uhd = { git = "https://github.com/samcrow/uhd-rust", rev = "203de86ea2d74dedba5f8c40435c6dbca2f069d7" }

[dev-dependencies]
tempfile = "*"
